WISH: coloured pastebin
WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
DUMB: support tex fonts
TODO: decrqm http://ue.tst.eu/71d7dbd1fcfeaa7d2a4b96eb957d570c.txt
TODO: perl-shell-window? perl-unix-socket?
TODO: command line editing when icanon?
TODO: split ROW into a ROW_fast (0..total*2-1) and ROW macros?

	- fix height mismatch between active and inactive cursor when
	  lineSpace is non zero (patch by Stanislav Seletskiy).

9.15 Sat Jan 21 13:36:56 CET 2012
	- remove "using namespace std" because clang erroneously
          thinks thats an error.
	- finding a matching font (e.g. bold version of the base font)
	  was broken (reported by Eamon Walker).
	- fix parsing of bg image styles. They really work now.
	- fix blurring of bg image borders when using xrender.
	- fix xrender blur on common xrender implementations that do
	  not behave correctly when the same pixmap is used as source
	  and destination in composite operations.
	- fix regression that caused tabbed to compute the wrong size
	  for tabs.
	- allow again an empty suffix in a keysym list spec (patch by
	  Sung Pae).
	- unsupported support for sun studio's CC added.
	- fix -C option on solaris.

9.14 Wed Dec 21 18:40:33 CET 2011
	- INCOMPATIBLE CHANGE: the urxvtd default socket path is now
	  $HOME/.urxvt/urxvtd-<nodename>.
	- INCOMPATIBLE CHANGE: the "list" keysym expansion now requires
	  loading of the "keysym-list" perl extension.
	- INCOMPATIBLE CHANGE: A scale value of 0 in the bg image
	  geometry no longer enables tiling, so as to make it possible
	  to disable both scaling and tiling.
	- overhaul of the bg image operations. The old operations have
	  been deprecated in favour of elementary operations and
	  styles built on top of the new operations and scale/position
	  settings. (Emanuele Giaquinta).
	- support for libafterimage is deprecated and will be removed
	  in the next release.